--- a/itgm6/index.html
+++ b/itgm6/index.html
@@ -96,10 +96,12 @@
 
     .ui.container .h-hero {
       margin-bottom: 2em;
+      color: #ff8300;
     }
 
     .ui.grid.photos {
-      margin: 2em 0;
+      margin-top: 48px;
+      margin-bottom: 0px;
     }
 
     .ui.grid.photos .column {
@@ -113,6 +115,10 @@
     #topmenu .mini.image {
       width: 24px;
       height: 24px;
+    }
+
+    #about {
+      padding-bottom: 0px;
     }
 
     #about .stat {
